feat: http UserExistsError -> LoginInUse
